--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,15 @@
   border: 1px solid #3d7e5b;
 }
 
-.bgcolor-border:nth-child(3n-1) {
+.nav-list-item + .bgcolor-border:nth-child(even) {
   border-right: 0;
   border-left: 0;
-}
+} 
 
 
 .nav-list {
   font-size: 0;
-  margin: 30px;
+  margin: 5%;
 }
 
 .nav-list-item {
@@ -34,7 +34,7 @@
 .link {
   display: inline-block;
   position: relative;
-  padding: 10px 30px;
+  padding: 10px;
   text-decoration: none;
   font-size: 16px;
   color: white;
@@ -45,7 +45,6 @@
   display: none;
   position: absolute;
   width: 100%;
-  list-style: inherit;
   
 }
 
