--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 
 .nav-list {
   font-size: 0;
-  margin: 1% 3%;
+  margin: 10px 30px;
 }
 
 .nav-list-item {
@@ -77,5 +77,5 @@
 
 
 .main-text {
-  padding: 0 2%;
+  padding: 0 20px;
 }
